# atrium

./: .git-blame-ignore-revs  .gitignore  .gitleaks.toml  AGENTS.md  ARTIFACT_CAPTURE_REPORT.md  ARTIFACT_CAPTURE_SPEC.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HARNESS_RESUME_E2E.md  HARNESS_RESUME_REPORT.md  HARNESS_RESUME_SPEC.md  JOURNAL.md  Justfile  LICENSE  NOTICE  PLAN.md  README.md  SECURITY.md  SUPPORT.md  pnpm-lock.yaml  pnpm-workspace.yaml
.sj-audit/: .gitignore  config.yaml
centaur/centaur_sdk/: README.md  __init__.py  cli_tables.py  logging.py  pyproject.toml  ruff.toml  tool_sdk.py
centaur/centaur_sdk/backends/: __init__.py  base.py  env.py  registry.py  stub.py
centaur/centaur_sdk/tests/: test_tool_sdk.py
centaur/crates/harness-server/: Cargo.toml
centaur/crates/harness-server/src/: amp.rs  anthropic.rs  claude.rs  codex.rs  error.rs  lib.rs  main.rs  otel.rs  server.rs  traits.rs  turn.rs  util.rs  validation.rs  wire.rs
centaur/crates/harness-server/tests/: app_server_stdio.rs
centaur/services/api-rs/: .dockerignore  Cargo.toml  Dockerfile  Justfile
centaur/services/api-rs/crates/absurd-sdk/: Cargo.toml  README.md
centaur/services/api-rs/crates/absurd-sdk/examples/: crazy_workflow.rs
centaur/services/api-rs/crates/centaur-api-integration-test/: Cargo.toml
centaur/services/api-rs/crates/centaur-api-server/: Cargo.toml
centaur/services/api-rs/crates/centaur-iron-proxy/: Cargo.toml
centaur/services/api-rs/crates/centaur-node-sync/: Cargo.toml  Dockerfile
centaur/services/api-rs/crates/centaur-perms/: Cargo.toml
centaur/services/api-rs/crates/centaur-sandbox-agent-k8s/: Cargo.toml
centaur/services/api-rs/crates/centaur-sandbox-core/: Cargo.toml
centaur/services/api-rs/crates/centaur-sandbox-e2e/: Cargo.toml
centaur/services/api-rs/crates/centaur-sandbox-local/: Cargo.toml
centaur/services/api-rs/crates/centaur-sandbox-manager/: Cargo.toml
centaur/services/api-rs/crates/centaur-session-cli/: Cargo.toml
centaur/services/api-rs/crates/centaur-session-core/: Cargo.toml
centaur/services/api-rs/crates/centaur-session-runtime/: Cargo.toml
centaur/services/api-rs/crates/centaur-session-sqlx/: Cargo.toml  build.rs
centaur/services/api-rs/crates/centaur-telemetry/: Cargo.toml
centaur/services/api-rs/crates/centaur-workflows/: Cargo.toml
centaur/services/api-rs/rfcs/: 0001-sandbox-abstraction.md  0002-session-control-plane.md  0003-python-workflow-host.md  0003-telemetry.md  0004-console-mcp-jwt-auth.md
centaur/services/workflow-python/: pyproject.toml  workflow_host.py
centaur/services/workflow-python/api/: __init__.py  app.py  metrics.py  runtime_control.py  workflow_engine.py
centaur/services/workflow-python/tests/: test_workflow_host.py
centaur/tools/business/ashby/: .env.example  __init__.py  cli.py  client.py  pyproject.toml
centaur/tools/business/attio/: .env.example  cli.py  client.py  pyproject.toml
centaur/tools/business/pylon/: .env.example  __init__.py  cli.py  client.py  pyproject.toml
centaur/tools/comms/synoptic/: cli.py  client.py  pyproject.toml
centaur/tools/comms/synoptic/sdk/: config.py  exceptions.py  models.py
centaur/tools/comms/telegram/: .env.example  __init__.py  cli.py  client.py  error.py  pyproject.toml  user_client.py
centaur/tools/comms/twitter/: __init__.py  cli.py  client.py  pyproject.toml
centaur/tools/crypto/alchemy/: .env.example  __init__.py  cli.py  client.py  pyproject.toml
centaur/tools/crypto/allium/: .env.example  cli.py  client.py  pyproject.toml
centaur/tools/crypto/arkham/: .env.example  __init__.py  cli.py  client.py  pyproject.toml
centaur/tools/crypto/coindesk/: .env.example  __init__.py  cli.py  client.py  pyproject.toml
centaur/tools/crypto/coindesk/tests/: test_client.py
centaur/tools/crypto/coingecko/: .env.example  cli.py  client.py  pyproject.toml
centaur/tools/crypto/databento/: .env.example  cli.py  client.py  pyproject.toml
centaur/tools/crypto/debank/: .env.example  __init__.py  cli.py  client.py  pyproject.toml
centaur/tools/crypto/defillama/: .env.example  cli.py  client.py  pyproject.toml
centaur/tools/crypto/dune/: .env.example  cli.py  client.py  pyproject.toml
centaur/tools/crypto/eodhd/: .env.example  cli.py  client.py  pyproject.toml
centaur/tools/crypto/etherscan/: .env.example  cli.py  client.py  pyproject.toml
centaur/tools/crypto/kalshi/: .env.example  cli.py  client.py  pyproject.toml
centaur/tools/crypto/karma/: .env.example  cli.py  client.py  pyproject.toml
centaur/tools/crypto/messari/: .env.example  cli.py  client.py  pyproject.toml
centaur/tools/crypto/mpp/: cli.py  client.py  pyproject.toml
centaur/tools/crypto/nansen/: .env.example  cli.py  client.py  pyproject.toml
centaur/tools/crypto/polymarket/: .env.example  cli.py  client.py  pyproject.toml
runtime/node-sync/: .dockerignore  .gitignore  CONTRACT.md  Cargo.toml  Dockerfile
runtime/node-sync/ci/: build-and-load.sh  overlay-validation.sh  pod-native-e2e.sh  warmcache-pod-e2e.sh  warmpool-home-compose-poc.sh  warmpool-rebind-poc.sh
runtime/node-sync/contract/: contract.toml
runtime/node-sync/contract/fixtures/: artifacts-changes.json  atrium-changes.json  atrium-channels.json  capture-response.json  git-identity.json  hydration-scope.json  profile-bundles.json  provision-overlay-argv.json  warmcache-hydrate-argv.json  warmcache-hydration.json
runtime/node-sync/docs/: warm-working-set-hydration.md
runtime/node-sync/src/: adopt.rs  backpressure.rs  cas.rs  depcache.rs  eviction.rs  http_client.rs  lib.rs  materializer.rs  overlay_mount.rs  profile_candidates.rs  runtime.rs  scoped.rs  seam.rs  secret.rs  session_manifest.rs  state.rs  tornread.rs  warmcache.rs  watch.rs  wip.rs
runtime/node-sync/src/daemon/: config.rs  loop_state.rs  mod.rs  session.rs
runtime/node-sync/tests/: contract.rs  git_identity_overlay_visibility.rs  git_identity_visibility.rs  hydration_lower_persistence.rs  scoped_differential.rs
tools/comms/discord/: cli.py  client.py  pyproject.toml
tools/infra/laminar/: client.py  pyproject.toml
(+2679 files in other folders)
