[project]
name = "centaur-sdk"
version = "0.1.0"
description = "Lightweight SDK for building Centaur-compatible tools"
requires-python = ">=3.11"
readme = "README.md"
license = "Apache-2.0 OR MIT"
dependencies = []

[project.optional-dependencies]
http = ["httpx>=0.28.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
