[package]
name = "centaur-node-sync"
version = "0.1.0"
edition = "2024"
# Atrium-original crate — AGPL like the rest of the Atrium repo, unlike the
# permissive (Apache-2.0 OR MIT) vendored fork under centaur/. It ships only
# standalone binaries; nothing in the centaur workspace links it as a library.
# See LICENSE here + repo-root NOTICE.
license = "AGPL-3.0-or-later"
repository = "https://github.com/useatrium/atrium"

# The node-side sync component (Track C4 + the inbound complement). Privileged,
# one-per-node: scans each session's overlay `upper` (the changed set), classifies
# overlay encoding into capture ops, reads bytes with symlink-hardened + torn-read
# safety, and (inbound) writes reconciled bytes back through `merged`. The
# classifier + safety state-machines here are platform-neutral and unit-tested;
# the actual syscalls (openat2, statx, xattr, /proc) live behind cfg(linux) and are
# exercised by the on-node integration tests.

# Standalone workspace root — this crate deliberately does NOT belong to the
# centaur/services/api-rs workspace (it is Atrium-owned, not part of the fork).
[workspace]

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2"
regex = "1"
hex = "0.4"
sha2 = "0.10"
# Daemon HTTP client (egress-only to Atrium). ureq = minimal, blocking, no tokio —
# keeps the node daemon light + fast to compile.
ureq = { version = "2", features = ["json"] }
serde_json = "1"
toml = "0.8"

# Linux-only: the privileged node scanner's real syscalls (statx/rdev via std,
# overlay xattrs via `xattr`, openat2 via a raw `libc` syscall).
[target.'cfg(target_os = "linux")'.dependencies]
inotify = { version = "0.11.2", default-features = false }
libc = "0.2"
xattr = "1"

[dev-dependencies]
tempfile = "3"

# Mirrors the lint policy the crate had inside the api-rs workspace; CI runs
# clippy with -D warnings, so warn-level lints are hard failures there.
[lints.clippy]
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"
