[workspace]
members = [
    "crates/absurd-sdk",
    "crates/centaur-api-server",
    "crates/centaur-api-integration-test",
    "crates/centaur-iron-control",
    "crates/centaur-iron-proxy",
    "crates/centaur-node-sync",
    "crates/centaur-perms",
    "crates/centaur-sandbox-core",
    "crates/centaur-sandbox-e2e",
    "crates/centaur-sandbox-agent-k8s",
    "crates/centaur-sandbox-local",
    "crates/centaur-sandbox-manager",
    "crates/centaur-session-cli",
    "crates/centaur-session-core",
    "crates/centaur-session-runtime",
    "crates/centaur-session-sqlx",
    "crates/centaur-telemetry",
    "crates/centaur-workflows",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/paradigmxyz/centaur"

# Workspace-wide lint policy. CI runs `cargo clippy --workspace --all-targets
# -- -D warnings`, so every warn-level lint below (and every default clippy
# warning) is a hard failure there while staying a warning locally.
[workspace.lints.clippy]
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
absurd-sdk = { path = "crates/absurd-sdk" }
axum = "0.8.9"
aws-config = "1"
aws-sdk-s3 = "1"
aws-smithy-types = "1"
bytes = { version = "1", features = ["serde"] }
centaur-api-server = { path = "crates/centaur-api-server" }
centaur-iron-control = { path = "crates/centaur-iron-control" }
centaur-iron-proxy = { path = "crates/centaur-iron-proxy" }
centaur-sandbox-core = { path = "crates/centaur-sandbox-core" }
centaur-sandbox-agent-k8s = { path = "crates/centaur-sandbox-agent-k8s" }
centaur-sandbox-local = { path = "crates/centaur-sandbox-local" }
centaur-sandbox-manager = { path = "crates/centaur-sandbox-manager" }
centaur-session-core = { path = "crates/centaur-session-core" }
centaur-session-runtime = { path = "crates/centaur-session-runtime" }
centaur-session-sqlx = { path = "crates/centaur-session-sqlx" }
centaur-telemetry = { path = "crates/centaur-telemetry" }
centaur-workflows = { path = "crates/centaur-workflows" }
clap = { version = "4.6.1", features = ["derive", "env"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
chrono-tz = "0.10.4"
cron = "0.16.0"
crossterm = "0.28"
dashmap = "6"
eventsource-stream = "0.2.3"
eyre = "0.6"
base64 = "0.22"
futures-util = { version = "0.3", features = ["sink"] }
hmac = "0.12"
hex = "0.4"
jiff = "0.2"
k8s-openapi = { version = "0.27.1", features = ["latest"] }
kube = "3.1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls", "stream"] }
ratatui = "0.29"
rustls = "0.23"
opentelemetry = "0.32.0"
opentelemetry-otlp = { version = "0.32.0", default-features = false, features = ["http-proto", "reqwest-blocking-client", "trace"] }
opentelemetry-proto = { version = "0.32.0", default-features = false, features = ["trace", "gen-tonic-messages"] }
opentelemetry_sdk = { version = "0.32.1", features = ["trace"] }
prost = "0.14"
metrics = "0.24.6"
metrics-exporter-prometheus = { version = "0.18.3", default-features = false }
sqlx = { version = "0.8.6", default-features = false, features = ["derive", "json", "macros", "migrate", "postgres", "runtime-tokio-rustls", "time"] }
strum = { version = "0.28", features = ["derive"] }
subtle = "2"
test-case = "3.3.1"
thiserror = "2"
time = { version = "0.3", features = ["serde", "serde-well-known"] }
tokio = "1"
tokio-util = "0.7"
toml = "0.8"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6.11", features = ["trace"] }
tracing = "0.1"
tracing-opentelemetry = "0.33.0"
tracing-subscriber = "0.3"
urlencoding = "2"
uuid = { version = "1", features = ["serde", "v4", "v5"] }
