[project]
name = "synoptic"
description = "Synoptic-backed Twitter CLI for user profiles, followers, tweets, and search"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "httpx>=0.28.1",
    "tenacity>=8.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.centaur]
module = "client.py"
secrets = [{type = "http", name = "SYNOPTIC_API_KEY", match_headers = ["x-api-key"], hosts = ["api.synoptic.com"]}]
