[project]
name = "telegram"
description = "Telegram CLI for AI agents - send messages, search chats, gather context"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot>=21.0",
    "telethon>=1.36.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
telegram = "centaur_tool_telegram.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build.targets.wheel.sources]
"." = "centaur_tool_telegram"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.centaur]
module = "client.py"
secrets = [{type = "http", name = "TELEGRAM_BOT_TOKEN", match_path = true, hosts = ["api.telegram.org"]}]
