[project]
name = "alchemy"
description = "Alchemy CLI for blockchain data, token balances, transfers, and prices"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.scripts]
alchemy = "centaur_tool_alchemy.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build.targets.wheel.sources]
"." = "centaur_tool_alchemy"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.centaur]
module = "client.py"
secrets = [{type = "http", name = "ALCHEMY_API_KEY", match_headers = ["Authorization"], match_path = true, hosts = ["*.g.alchemy.com"]}]
