[project]
name = "allium"
description = "Allium on-chain analytics — SQL queries, schema search, stablecoin analysis"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
allium = "centaur_tool_allium.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build.targets.wheel.sources]
"." = "centaur_tool_allium"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.centaur]
module = "client.py"
secrets = [{type = "http", name = "ALLIUM_API_KEY", mode = "inject", inject_header = "X-API-KEY", hosts = ["api.allium.so", "mcp.allium.so"]}]
