[project]
name = "arkham"
description = "Arkham Intelligence CLI for blockchain analytics and wallet tracking"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.scripts]
arkham = "centaur_tool_arkham.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build.targets.wheel.sources]
"." = "centaur_tool_arkham"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.centaur]
module = "client.py"
secrets = [{type = "http", name = "ARKHAM_API_KEY", mode = "inject", inject_header = "API-Key", hosts = ["api.arkm.com"]}]
