[project]
name = "coingecko"
description = "CoinGecko Pro API — prices, markets, trending coins, exchanges"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
coingecko = "centaur_tool_coingecko.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build.targets.wheel.sources]
"." = "centaur_tool_coingecko"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.centaur]
module = "client.py"
secrets = [{type = "http", name = "COINGECKO_API_KEY", mode = "inject", inject_header = "x-cg-pro-api-key", hosts = ["pro-api.coingecko.com"]}]
