[project]
name = "debank"
description = "DeBank CLI for DeFi wallet data, token balances, and protocol positions"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.scripts]
debank = "centaur_tool_debank.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build.targets.wheel.sources]
"." = "centaur_tool_debank"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.centaur]
module = "client.py"
secrets = [{type = "http", name = "DEBANK_API_KEY", mode = "inject", inject_header = "AccessKey", hosts = ["pro-openapi.debank.com"]}]
