[project]
name = "defillama"
description = "DefiLlama DeFi analytics — TVL, stablecoins, DEX volumes, bridges, fees"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
defillama = "centaur_tool_defillama.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build.targets.wheel.sources]
"." = "centaur_tool_defillama"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.centaur]
module = "client.py"
secrets = [{type = "http", name = "DEFILLAMA_API_KEY", match_query = true, match_path = true, hosts = ["api.llama.fi", "stablecoins.llama.fi", "bridges.llama.fi", "pro-api.llama.fi"]}]
