[project]
name = "dune"
description = "Dune Analytics — execute queries, fetch results, check status"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
dune = "centaur_tool_dune.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build.targets.wheel.sources]
"." = "centaur_tool_dune"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.centaur]
module = "client.py"
secrets = [{type = "http", name = "DUNE_API_KEY", mode = "inject", inject_header = "X-Dune-API-Key", hosts = ["api.dune.com"]}]
