[project]
name = "eodhd"
description = "EODHD Financial API — real-time quotes and historical EOD prices"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
eodhd = "centaur_tool_eodhd.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build.targets.wheel.sources]
"." = "centaur_tool_eodhd"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.centaur]
module = "client.py"
secrets = [{type = "http", name = "EODHD_API_KEY", mode = "inject", inject_query_param = "api_token", hosts = ["eodhd.com"]}]
