[project]
name = "etherscan"
description = "Etherscan — Ethereum block explorer, transactions, contracts, and tokens"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
etherscan = "centaur_tool_etherscan.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build.targets.wheel.sources]
"." = "centaur_tool_etherscan"

[tool.centaur]
module = "client.py"
secrets = [{type = "http", name = "ETHERSCAN_API_KEY", mode = "inject", inject_query_param = "apikey", hosts = ["api.etherscan.io"]}]
