[project]
name = "messari"
description = "Messari crypto asset data — prices, metrics, profiles, markets, news"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
messari = "centaur_tool_messari.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build.targets.wheel.sources]
"." = "centaur_tool_messari"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.centaur]
module = "client.py"
secrets = [{type = "http", name = "MESSARI_API_KEY", mode = "inject", inject_header = "x-messari-api-key", hosts = ["api.messari.io"]}]
