[project]
name = "nansen"
description = "Nansen blockchain analytics — wallet labels, Smart Money, token data"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
nansen = "centaur_tool_nansen.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build.targets.wheel.sources]
"." = "centaur_tool_nansen"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.centaur]
module = "client.py"
secrets = [{type = "http", name = "NANSEN_API_KEY", mode = "inject", inject_header = "apiKey", hosts = ["api.nansen.ai"]}]
