[project]
name = "polymarket"
description = "Polymarket prediction market data — markets, events, prices, orderbooks"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
polymarket = "centaur_tool_polymarket.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build.targets.wheel.sources]
"." = "centaur_tool_polymarket"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.centaur]
module = "client.py"
hosts = ["gamma-api.polymarket.com", "clob.polymarket.com"]
secrets = []
